Sem BUG, implementado modelo matemático

--- a/bin/makefile
+++ b/bin/makefile
@@ -1,6 +1,6 @@
 all: cond.o
 	gfortran -o cond cond.o
 cond.o: ../source/cond.f90
-	gfortran -c ../source/cond.f90
+	gfortran -c -Wall -Werror -fcheck=all ../source/cond.f90
 clean:
 	rm -rf  cond *.*
