Alteração configuração do código

--- a/bin/makefile
+++ b/bin/makefile
@@ -1,9 +1,9 @@
-all: mod_cond.o cond.o
-	gfortran -o cond cond.o mod_cond.o
-cond.o: ../source/cond.f90
-	gfortran -c -Wall -Werror -fcheck=all ../source/cond.f90
-mod_cond.o: ../source/mod_cond.f90
-	gfortran -c -Wall -Werror -fcheck=all ../source/mod_cond.f90
+all: in_out.o calc.o
+	gfortran -o cond calc.o in_out.o
+calc.o: ../source/calc.f90
+	gfortran -c -Wall -Werror -fcheck=all ../source/calc.f90
+in_out.o: ../source/in_out.f90
+	gfortran -c -Wall -Werror -fcheck=all ../source/in_out.f90
 
 test: all
 	valgrind --leak-check=full --show-reachable=yes --track-origins=yes ./cond
