--- a/bin/makefile
+++ b/bin/makefile
@@ -1,12 +1,16 @@
-all: in_out.o calc.o
+all: in_out.o calc.o 
 	gfortran -o cond calc.o in_out.o
 calc.o: ../source/calc.f90
 	gfortran -c -Wall -Werror -fcheck=all ../source/calc.f90
 in_out.o: ../source/in_out.f90
 	gfortran -c -Wall -Werror -fcheck=all ../source/in_out.f90
-
+output: 
+	mkdir ../output
 test: all
 	valgrind --leak-check=full --show-reachable=yes --track-origins=yes ./cond
 clean:
-	rm -rf  cond *.*
-
+	rm -rf  cond *.o* *.mod
+python:
+	python out.py
+gif: python
+	cd ../output/ && convert -delay 20 -loop 0 *.png ../out.gif
